<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden_shelf"

    tools:context="com.games.garrett.theliquorcabinet.activities.MainActivity" >

    <TextView
        android:id="@+id/title"
        android:text="@string/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="#f4d433"
        android:layout_above="@+id/quick_rate_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="102dp"/>

    <Button
        android:id="@+id/quick_rate_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/quick_rate"
        android:textSize="20sp"
        android:textColor="#f4d433"
        android:layout_marginBottom="104dp"
        android:layout_above="@+id/recommend_button"
        android:layout_alignEnd="@+id/liquor_logs_button" />


    <Button
        android:id="@+id/browse_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/browse"
        android:textColor="#f4d433"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/quick_rate_button"
        android:layout_alignBottom="@+id/quick_rate_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="44dp" />


    <Button
        android:id="@+id/recommend_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recommend"
        android:textColor="#f4d433"
        android:textSize="20sp"
        android:layout_marginBottom="66dp"
        android:layout_above="@+id/liquor_logs_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/liquor_logs_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text= "@string/liquor_logs"
        android:textColor="#f4d433"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/settings_button"
        android:layout_alignBottom="@+id/settings_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp" />


    <Button
        android:id="@+id/settings_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/settings"
        android:textColor="#f4d433"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/browse_button"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="15dp" />

</RelativeLayout>
