<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wooden_shelf"
    android:nestedScrollingEnabled="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SETTINGS"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="#f4d433"/>

    <TextView
        android:id="@+id/seek_bar_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textColor="#f4d433"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius"
            android:gravity="start"
            android:layout_marginStart="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#f4d433"/>

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:max="100"/>

    </LinearLayout>

    <Button
        android:id="@+id/clear_ratings_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#f4d433"/>

    <TextView
        android:id="@+id/about_title"
        android:text="@string/about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="#f4d433"/>

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#f4d433"
        android:text="@string/about"/>


</LinearLayout>

</ScrollView>